--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,8 @@
 ---
 layout: default
 ---
-<article class="post">
+<div class="ui main text container">
+  <h1 class="ui header">{{ page.title }}</h1>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+  {{ content }}
+</div>
