Fancy page for Quickly

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<div class="ui main text container">
-  <h1 class="ui centered header">
-    <img src="{{ page.logo }}" style="height: 56px; width: 56px; vertical-align: -15px"></img>
+<div style="margin-top: 6em">
+  <h1 class="ui centered header" style="font-size: 36px">
+    <img src="{{ page.logo }}" style="height: 64px; width: 64px; vertical-align: -17px"></img>
     {{ page.title }}
   </h1>
 
-  <h3 style="opacity: 0.54; font-style: italic; font-weight: 400; text-align: center">{{ page.tagline }}</h3>
+  <h2 style="opacity: 0.54; font-style: italic; font-weight: 400; text-align: center">{{ page.tagline }}</h2>
 
   <br>
 
