--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,45 +1,27 @@
 <div class="ui inverted vertical footer segment">
   <div class="ui center aligned container">
-    <div class="ui stackable inverted divided grid">
-      <div class="three wide column">
-        <h4 class="ui inverted header">Group 1</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item">Link One</a>
-          <a href="#" class="item">Link Two</a>
-          <a href="#" class="item">Link Three</a>
-          <a href="#" class="item">Link Four</a>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header">Group 2</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item">Link One</a>
-          <a href="#" class="item">Link Two</a>
-          <a href="#" class="item">Link Three</a>
-          <a href="#" class="item">Link Four</a>
-        </div>
-      </div>
-      <div class="three wide column">
-        <h4 class="ui inverted header">Group 3</h4>
-        <div class="ui inverted link list">
-          <a href="#" class="item">Link One</a>
-          <a href="#" class="item">Link Two</a>
-          <a href="#" class="item">Link Three</a>
-          <a href="#" class="item">Link Four</a>
-        </div>
-      </div>
-      <div class="seven wide column">
-        <h4 class="ui inverted header">Footer Header</h4>
-        <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
-      </div>
+    <div class="ui horizontal inverted small divided list" style="margin-bottom: 1em">
+      <div class="item" style="color: rgba(255,255,255,0.54)">&copy; 2016 Michael Spencer</div>
     </div>
-    <div class="ui inverted section divider"></div>
-    <img src="assets/images/logo.png" class="ui centered mini image">
-    <div class="ui horizontal inverted small divided link list">
-      <a class="item" href="#">Site Map</a>
-      <a class="item" href="#">Contact Us</a>
-      <a class="item" href="#">Terms and Conditions</a>
-      <a class="item" href="#">Privacy Policy</a>
+    <div>
+      <a class="ui circular google plus icon button" href="https://plus.google.com/+MichaelSpencer">
+        <i class="google plus icon"></i>
+      </a>
+      <a class="ui circular twitter icon button" href="https://twitter.com/iBeliever316">
+        <i class="twitter icon"></i>
+      </a>
+      <!-- <button class="ui circular linkedin icon button">
+        <i class="linkedin icon"></i>
+      </button> -->
+      <a class="ui circular icon button" href="https://github.com/iBeliever">
+        <i class="github icon"></i>
+      </a>
+      <a class="ui circular yellow icon button" href="mailto:sonrisesoftware@gmail.com">
+        <i class="mail icon"></i>
+      </a>
+    </div>
+    <div class="ui horizontal inverted small divided linked list" style="margin-top: 2em">
+      <a class="item" href="https://github.com/iBeliever/ibeliever.github.io/issues"><i class="bug icon"></i> Report an Issue</a>
     </div>
   </div>
 </div>
