Fix the sidebar and menu on mobile

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,6 +6,9 @@
   {% endif %}
 {% endfor %}
 
+<a class="item" href="http://papyros.io">Papyros</a>
+<a class="item" href="http://github.com/papyros/qml-material">QML Material</a>
+
 <div class="right menu">
   <a class="item" href="https://plus.google.com/+MichaelSpencer"><i class="google plus icon"></i></a>
   <a class="item" href="mailto:sonrisesoftware@gmail.com"><i class="mail icon"></i></a>
