--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,14 @@
 
     {% include header.html %}
 
+    {% include sidebar.html %}
+
     <div class="pusher">
       {% include masthead.html %}
 
       {{ content }}
 
       {% include footer.html %}
-
     </div>
 
   </body>
