--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,11 @@
 <div class="ui large top fixed {% if page.url == '/' %}hidden{% endif %} menu">
   <div class="ui container">
+    <a class="toc item">
+      <i class="sidebar icon"></i>
+    </a>
+    <div class="toc header item">
+      {{ page.title }}
+    </div>
     <div class="header item">
       Michael Spencer
     </div>
