--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,15 @@
 
   <body>
 
-    {% include header.html %}
+    {% include sidebar.html %}
 
-    {{ content }}
+    <div class="pusher">
+      {% include header.html %}
 
-    {% include footer.html %}
+      {{ content }}
+
+      {% include footer.html %}
+    </div>
 
   </body>
 
