Fix the masthead layout on mobile

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -16,14 +16,17 @@
     <h2 class="subheader">Software Developer</h2>
     <h3 class="tagline">To God Alone be the Glory</h3>
 
-    <a class="ui red button" href="https://plus.google.com/+MichaelSpencer">
-      <i class="large google plus icon"></i>
-      Follow me on Google+
-    </a>
-    <a class="ui primary button" style="margin-left: 10px" href="https://github.com/iBeliever">
-      <i class="large github icon" style="margin-top: -2px; margin-bottom: 2px"></i>
-      View my GitHub projects
-    </a>
+    <div style="display: flex; justify-content: center; flex-wrap: wrap">
+      <a class="ui red button" style="flex-shrink: 0; margin: 5px" href="https://plus.google.com/+MichaelSpencer">
+        <i class="large google plus icon"></i>
+        Follow me on Google+
+      </a>
+      <a class="ui primary button" style="flex-shrink: 0; margin: 5px" href="https://github.com/iBeliever">
+        <i class="large github icon" style="margin-top: -2px; margin-bottom: 2px"></i>
+        View my GitHub projects
+      </a>
+    </div>
+
   </div>
 
 </div>
