Proper blog posts and comments support

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,8 @@
       {% include footer.html %}
     </div>
 
+    <script id="dsq-count-scr" src="//ibeliever.disqus.com/count.js" async></script>
+
   </body>
 
 </html>
