--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -17,12 +17,14 @@
     <h3 class="tagline">To God Alone be the Glory</h3>
 
     <div style="display: flex; justify-content: center; flex-wrap: wrap">
-      <a class="ui red button" style="flex-shrink: 0; margin: 5px" href="https://plus.google.com/+MichaelSpencer">
+      <a class="ui red labeled icon button" style="flex-shrink: 0; margin: 5px"
+         href="https://plus.google.com/+MichaelSpencer">
         <i class="large google plus icon"></i>
         Follow me on Google+
       </a>
-      <a class="ui primary button" style="flex-shrink: 0; margin: 5px" href="https://github.com/iBeliever">
-        <i class="large github icon" style="margin-top: -2px; margin-bottom: 2px"></i>
+      <a class="ui primary labeled icon button" style="flex-shrink: 0; margin: 5px"
+         href="https://github.com/iBeliever">
+        <i class="large github icon"></i>
         View my GitHub projects
       </a>
     </div>
