Add Google Analytics

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,8 @@
 
     <script id="dsq-count-scr" src="//ibeliever.disqus.com/count.js" async></script>
 
+    {% include analytics.html %}
+
   </body>
 
 </html>
