--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 
     <script id="dsq-count-scr" src="//ibeliever.disqus.com/count.js" async></script>
 
+    {% include analytics.html %}
+
   </body>
 
 </html>
